...
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp">

    <TextView
        android:id="@+id/textView_habitName"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/string_habit_sample"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_day0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_day0" />

    <ImageView
        android:id="@+id/imageView_day0"
        android:layout_width="wrap_content"
...
